# dc-api-v2

./: .gitignore  .mocharc.js  .tool-versions  Makefile  README.md  StateMachine.json  aws-stepfunctions-local-credentials.txt  chat-client.ipynb  nyc.config.js  package-lock.json  package.json  template.yaml
chat/: README.md  pyproject.toml  template.yaml
chat/dependencies/: requirements.txt
chat/src/: content_handler.py  event_config.py  handlers.py  http_event_config.py  playground.ipynb  requirements-dev.txt  requirements.txt  secrets.py  setup.py  websocket.py
chat/src/agent/: agent.py  agent_handler.py  checkpoint_factory.py  checkpoints.py  dynamodb_cleaner.py  dynamodb_saver.py  metrics_handler.py  s3_saver.py  search_agent.py  tools.py
chat/src/core/: apitoken.py  document.py  event_config.py  prompts.py  rate_limiter.py  secrets.py  setup.py  websocket.py
chat/src/handlers/: chat.py  chat_sync.py  model.py  opensearch_neural_search.py  streaming_socket_callback_handler.py
chat/src/helpers/: apitoken.py  http_response.py  hybrid_query.py  metrics.py  prompts.py  response.py  utils.py
chat/src/persistence/: compressible_json_serializer.py  s3_checkpointer.py  selective_checkpointer.py
chat/src/search/: hybrid_query.py  opensearch_neural_search.py
chat/test/: test_event_config.py  test_websocket.py
chat/test/agent/: test_agent_handler.py  test_facets_tool_node.py  test_search_agent.py  test_search_workflow.py  test_tools.py
chat/test/core/: test_apitoken.py  (+6 more)
docs/: mkdocs.yml  pyproject.toml  requirements.txt  template.yaml
docs/docs/: index.md  oai.md  spec.md
docs/redirect/: index.js
(+444 files in other folders)
