[project]
name = "dc-api-v2-docs"
version = "2.9.1"
requires-python = ">=3.12"
dependencies = [
  "mkdocs>=1.1.2,<2.0.0",
  "mkdocs-macros-plugin @ git+https://github.com/fralau/mkdocs_macros_plugin.git@v0.5.12",
  "Pygments>=2.7.3,<3.0.0",
  "diagrams>=0.21.1,<1.0.0",
  "mkdocs-material>=9.0.0",
  "mkdocs-render-swagger-plugin>=0.1.2",
  "setuptools>=78.1.0",
]
